--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=URL-Shortener
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=${db.url}
+spring.datasource.username=${db.username}
+spring.datasource.password=${db.password}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.profiles.active=dev
